# Native-Recorder-NodeJS

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build.yml
docs/: api.md  architecture.md  init.md
native/: AudioController.cpp  AudioController.h  AudioEngine.h  Factory.cpp  main.cpp
native/mac/: AVFEngine.h  AVFEngine.mm  SCKAudioCapture.h  SCKAudioCapture.mm
native/win/: WASAPIEngine.cpp  WASAPIEngine.h
src/: bindings.ts  index.ts
test/: cli_test.js  permission_test.js
test/native/: test_avf.cpp  test_factory.cpp  test_wasapi.cpp
